# personalBrain

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
config/: default.yaml
src/brain/: __init__.py  main.py  service.py
src/brain/agency/: __init__.py  notifications.py  scheduler.py
src/brain/api/: __init__.py  app.py
src/brain/cli/: __init__.py  app.py
src/brain/core/: __init__.py  config.py  extractors.py  models.py  summarizer.py
src/brain/intelligence/: __init__.py  claude_client.py  context_builder.py  embeddings.py  retriever.py
tests/: conftest.py
tests/unit/: test_markdown_parser.py
